tests/snapshots/run_command__building_service.stdout.snap
---
source: tests/run_command.rs
expression: "workspace.run([\"run\", \"build\", \"--filter\", \"service\"])"
---
library | build | "Building Library"
service | build | "Building Service"

