tests/snapshots/run_command__failures_stop_execution.stderr.snap
---
source: tests/run_command.rs
expression: stderr
---
library | fail | git: 'fail' is not a git command. See 'git --help'.

