tests/snapshots/run_command__nested_file_change_with_hashes.stdout.snap
---
source: tests/run_command.rs
expression: "workspace.run([\"run\", \"build\", \"--filter\", \"nested,service\"])"
---
 nested | build | "Building Nested"

