tests/snapshots/run_command__nested_file_change_with_since.stdout.snap
---
source: tests/run_command.rs
expression: "workspace.run([\"run\", \"build\", \"--since\", \"HEAD\"])"
---
 nested | build | "Building Nested"

