tests/snapshots/run_command__no_hash_changes.stdout.snap
---
source: tests/run_command.rs
expression: "workspace.run([\"run\", \"build\"])"
---
       library | build | "Building Library"
nested-service | build | "Building Nested"
       service | build | "Building Service"

